# Tervel

./: .gitignore  .ycm_extra_conf.py  404.md  CNAME  README.md  _config.yml  about.md  bio.md  build.bash  contributing.md  doxygen_config  faq.md  index.html  publications.md  roadmap.md  users.md
MCAS/: .gitignore  Makefile  main_tester.cpp  mcas  ucf_threading.cpp  ucf_threading.hpp  wf_mcas_3.hpp
MCAS_LIBV/: Makefile  ucf_threading.hpp
_includes/: footer.html  head.html  header.html
_layouts/: tervel_about.html  tervel_default.html  tervel_documentation.html  tervel_home.html
css/: style.css  syntax.css
docs/: beginner-tutorial.md  build-ref.html  getting-started.md  gettingstarted.txt  install.md  tervel-user-manual.html  tervel-user-manual.md  tutorial.txt  usermanual.txt
html/: _8ycm__extra__conf_8py.html  annotated.html  class_cas_row-members.html  class_cas_row.html  classes.html  classtervel_1_1memory_1_1_op_record-members.html  classtervel_1_1memory_1_1_op_record.html  classtervel_1_1memory_1_1_progress_assurance-members.html  classtervel_1_1memory_1_1_progress_assurance.html  classtervel_1_1memory_1_1_recursive_action-members.html  classtervel_1_1memory_1_1_recursive_action.html  classtervel_1_1memory_1_1hp_1_1_hazard_pointer-members.html  classtervel_1_1memory_1_1hp_1_1_hazard_pointer.html  classtervel_1_1memory_1_1rc_1_1_descriptor_pool-members.html  (+150 more)
mcas/: Makefile  mcas.h  (+11 more)
tervel/containers/lf/dictionary/src/: Makefile.am  config.h.in  main.cc
tervel/containers/lf/dictionary/src/common/: assert.cc
tervel/containers/lf/dictionary/src/common/wicht/: DummyHazard.h
tervel/containers/lf/dictionary/src/dictionary/: dictadaptor.h
tervel/containers/lf/dictionary/src/dictionary/bronson/: AVLTree.hpp
tervel/containers/lf/dictionary/src/dictionary/citrus/: Makefile.am  citrus.c  citrus.h  new_urcu.c
tervel/containers/lf/dictionary/src/dictionary/dick/: Makefile.am  common.h  skiplist.c  skiplist.h
tervel/containers/lf/dictionary/src/dictionary/ellen/: NBBST.hpp
tervel/containers/lf/dictionary/src/dictionary/fraser/: Makefile.am  gc.c  gc.h  ptst.c  ptst.h  set.h  skip_cas.c
tervel/containers/lf/dictionary/src/dictionary/herlihy/: SkipList.hpp
tervel/containers/lf/dictionary/src/dictionary/herlihyoptimistic/: Makefile.am  optimistic.c  optimistic.h  skiplist-lock.c  skiplist-lock.h
tervel/containers/lf/dictionary/src/dictionary/mdlist/: allocator.cc  allocator.h  mdlist.cc  mdlist.h
tervel/containers/lf/priorityqueue-linearizable/src/: Makefile.am
tervel/containers/lf/priorityqueue-linearizable/src/common/: assert.h  timehelper.cc
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/: queueadaptor.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/linden/: Makefile.am  Makefile.orig  README.md  common.c  gdb_skiplist_print.py  perf_meas.c  prioq.c
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/linden/gc/: ptst.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/mdlist/: allocator.cc  allocator.h  mdlist.cc  mdlist.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/monoheap/: monoheap.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/shavit/: ptst.c  ptst.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/sundell/: Sundell.h
tervel/containers/lf/priorityqueue-linearizable/src/priorityqueue/vectorheap/: vheap.h
tervel/containers/lf/priorityqueue-non-linearizable/src/priorityqueue/shavit/: Makefile.am  Makefile.in  gc.c  intel_defns.h  set.h  skip_cas.c
(+1760 files in other folders)
